chore: updated sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,11 @@
 sonar.projectKey=gabrielborc_ci-go-fc
 sonar.organization=gabrielborc
-
-# This is the name and version displayed in the SonarCloud UI.
 sonar.projectName=ci-go-fc
-#sonar.projectVersion=1.0
 
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
-
-# Encoding of the source code. Default is default system encoding
+sonar.sources=.
+sonar.exclusions=**/*_test.go
 sonar.sourceEncoding=UTF-8
+
+sonar.tests=.
+sonar.test.inclusions=**/*_test.go
+sonar.go.coverage.reportPaths=coverage.out
