chore: update setup running

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,7 +1,12 @@
 name: ci-golang-workflow
 on: 
+  push:
+    branches:
+      - master
+      - develop
   pull_request:
     branches:
+      - master
       - develop
 jobs: 
   check-application:
